# CompPhy-course-assignment-SYSU-PHY308

./: .gitignore  CMakeLists.txt  README.md
include/: info_op.h  matrix_op.h
report/: assignment-report-1.md  perf_results_6_programs.csv  perf_results_mpiseq_seq_cblas.csv
report/data/: perf_results_6_programs.csv  perf_results_node_scaling.csv
scripts/: node_scaling_test.py  performance_test.py
src/: MPIMatrixMultiply_bsp.c  MPIMatrixMultiply_tf.c  SeqMatrixMultiply.c  mpi_init_test.c
src/apps/: MM_RS_mpi.c  MM_RS_openmp.c  MM_RS_seq.c  MM_cblas_openmp.c  MM_cblas_seq.c
src/common/: info_op.c  info_op_openmp.c  matrix_op_base.c  matrix_op_cblas.c
